--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
         "codeceptjs:demo:headless": "HEADLESS=true codeceptjs run --steps -c node_modules/@codeceptjs/examples",
         "codeceptjs:demo:ui": "codecept-ui --app  -c node_modules/@codeceptjs/examples",
         "codeceptjs:features:ui": "codecept-ui --app --features",
-        "codeceptjs:tests": "codeceptjs run --tests"
+        "codeceptjs:tests": "codeceptjs run --tests",
+        "codeceptjs:features": "codeceptjs run --features",
+        "codeceptjs:tests:headless": "HEADLESS=true codeceptjs run --tests",
+        "codeceptjs:features:headless": "HEADLESS=true codeceptjs run --features"
     },
     "devDependencies": {
         "@codeceptjs/configure": "^0.6.2",
